--- a/Src/DissonanceEngine.csproj
+++ b/Src/DissonanceEngine.csproj
@@ -32,6 +32,7 @@
 	<ItemGroup>
 		<Reference Include="BulletSharp">
 			<HintPath>References\BulletSharp.dll</HintPath>
+			<Private>false</Private>
 		</Reference>
 		<Reference Include="Ionic.Zip">
 			<HintPath>References\Ionic.Zip.dll</HintPath>
