Unzipped BuiltInAssets and unleashed its horrors to source control.

--- a/Src/DissonanceEngine.csproj
+++ b/Src/DissonanceEngine.csproj
@@ -19,7 +19,9 @@
 	<ItemGroup>
 		<Compile Remove="References\**" />
 		<EmbeddedResource Remove="References\**" />
+		<EmbeddedResource Include="BuiltInAssets\**" />
 		<None Remove="References\**" />
+		<None Remove="BuiltInAssets\**" />
 	</ItemGroup>
 	
 	<ItemGroup>
