Created an adequate workflow. Natives are now present in the repository, and are copied together with assets to the output directories. Include the new DissonanceEngine.targets in your games' csproj files.

--- a/Src/DissonanceEngine.csproj
+++ b/Src/DissonanceEngine.csproj
@@ -47,5 +47,11 @@
 			<Private>false</Private>
 		</Reference>
 	</ItemGroup>
+	
+	<ItemGroup>
+	  <None Update="DissonanceEngine.dll.config">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
 
 </Project>
