--- a/Src/DissonanceEngine.csproj
+++ b/Src/DissonanceEngine.csproj
@@ -37,6 +37,8 @@
     	<PackageReference Include="Ionic.Zip" Version="1.9.1.8" />
     	<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     	<PackageReference Include="NVorbis" Version="0.10.4" />
+		<PackageReference Include="SixLabors.ImageSharp" Version="1.0.4" />
+		<PackageReference Include="Hjson" Version="3.0.0" />
 	</ItemGroup>
 	
 	<ItemGroup>
