--- a/Src/DissonanceEngine.csproj
+++ b/Src/DissonanceEngine.csproj
@@ -21,6 +21,7 @@
 	
 	<ItemGroup>
 		<ProjectReference Include="../Framework/Src/DissonanceFramework.csproj" />
+		<ProjectReference Include="../SourceGenerators/SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 	
 	<ItemGroup>
