Updated framework & one DllMapResolver usage.

--- a/Src/DissonanceEngine.csproj
+++ b/Src/DissonanceEngine.csproj
@@ -42,9 +42,7 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-	  <None Update="DissonanceEngine.dll.config">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </None>
+	  <None Update="DissonanceEngine.dll.config" CopyToOutputDirectory="PreserveNewest" />
 	</ItemGroup>
 
 </Project>
