--- a/Src/DissonanceEngine.csproj
+++ b/Src/DissonanceEngine.csproj
@@ -7,6 +7,7 @@
 		<Platforms>AnyCPU</Platforms>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<LangVersion>preview</LangVersion>
+		<IncludeContentInPack>true</IncludeContentInPack>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
@@ -17,20 +18,22 @@
 		<Optimize>true</Optimize>
 	</PropertyGroup>
 	
-	<Import Project="$(SolutionDir)SolutionDefines.targets" Condition="exists('$(SolutionDir)SolutionDefines.targets')" />
-	
 	<ItemGroup>
 		<ProjectReference Include="../SourceGenerators/DissonanceSourceGen.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 	
 	<ItemGroup>
-		<EmbeddedResource Include="..\References\*.dll" />
 		<EmbeddedResource Include="BuiltInAssets\**" />
 		<None Remove="BuiltInAssets\**" />
 	</ItemGroup>
 	
+	<!-- TEMPORARY -->
 	<ItemGroup>
-		<Reference Include="BulletSharp" HintPath="..\References\BulletSharp.dll" Private="false" />
+		<Compile Remove="Physics\**" />
+		
+		<!--
+		<Reference Include="BulletSharp" HintPath="..\References\BulletSharp.dll" Private="true" />
+		-->
 	</ItemGroup>
 	
 	<ItemGroup>
@@ -43,10 +46,6 @@
 		<PackageReference Include="Silk.NET.OpenAL " Version="2.13.0" />
 		<PackageReference Include="Silk.NET.OpenAL.Extensions.EXT" Version="2.13.0" />
 		<PackageReference Include="Silk.NET.OpenAL.Soft.Native" Version="1.21.1.1" />
-	</ItemGroup>
-	
-	<ItemGroup>
-	  <None Update="DissonanceEngine.dll.config" CopyToOutputDirectory="PreserveNewest" />
 	</ItemGroup>
 
 </Project>
