--- a/.editorconfig
+++ b/.editorconfig
@@ -16,6 +16,9 @@ root = true
 # CS1998: Async method lacks 'await' operators and will run synchronously
 dotnet_diagnostic.CS1998.severity = silent
 
+# CA1822: Mark members as static
+dotnet_diagnostic.CA1822.severity = none
+
 #### Core EditorConfig Options ####
 
 # Indentation and spacing
@@ -83,8 +86,8 @@ dotnet_diagnostic.CS1998.severity = silent
 	csharp_style_var_when_type_is_apparent = true:none
 
 # Expression-bodied members
-	csharp_style_expression_bodied_lambdas = when_on_single_line:suggestion
-	csharp_style_expression_bodied_local_functions = when_on_single_line:suggestion
+	csharp_style_expression_bodied_lambdas = when_on_single_line:none
+	csharp_style_expression_bodied_local_functions = when_on_single_line:none
 	csharp_style_expression_bodied_operators = when_on_single_line:suggestion
 	csharp_style_expression_bodied_constructors = when_on_single_line:silent
 	csharp_style_expression_bodied_methods = when_on_single_line:silent
