--- a/.editorconfig
+++ b/.editorconfig
@@ -16,6 +16,9 @@ root = true
 # CS1998: Async method lacks 'await' operators and will run synchronously
 dotnet_diagnostic.CS1998.severity = silent
 
+# CA1822: Mark members as static
+dotnet_diagnostic.CA1822.severity = none
+
 #### Core EditorConfig Options ####
 
 # Indentation and spacing
