--- a/.editorconfig
+++ b/.editorconfig
@@ -19,6 +19,9 @@ dotnet_diagnostic.CS1998.severity = silent
 # CA1822: Mark members as static
 dotnet_diagnostic.CA1822.severity = none
 
+# IDE0011: Add braces to statement
+dotnet_diagnostic.IDE0011.severity = warning # Always ask for curly braces everywhere.
+
 #### Core EditorConfig Options ####
 
 # Indentation and spacing
