--- a/Src/DissonanceEngine.csproj
+++ b/Src/DissonanceEngine.csproj
@@ -2,12 +2,12 @@
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net7.0</TargetFramework>
+		<LangVersion>11.0</LangVersion>
 		<AssemblyName>DissonanceEngine</AssemblyName>
 		<RootNamespace>Dissonance.Engine</RootNamespace>
 		<Platforms>AnyCPU</Platforms>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-		<LangVersion>preview</LangVersion>
 
 		<!-- Setting this property to true causes nuget packegs to be placed as .dll files in the output directory, as usually happens with Exe projects. -->
 		<!-- This is very useful for editors -->
